# hytrack

./: CMakeLists.OpenCV.txt  CMakeLists.txt  README  README.md  colortracker.cpp  colortracker.h  cvTracker.h  featuretracker.cpp  featuretracker.h  hybridtracker.h  hybridtracker.hpp  hybridtrackingsample.cpp  main.cpp  precomp.hpp
doc/: tracker.rst
include/opencv2/tracker/: hybridtracker.hpp
patch/: hytrack_contrib.patch  hytrack_module.patch
src/: colortracker.cpp  featuretracker.cpp  hybridtracker.cpp
